--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "homepage": "https://github.com/TSkoll/rei-ts#readme",
   "dependencies": {
     "@types/mongodb": "^3.5.6",
+    "@types/mongoose": "^5.7.11",
     "@types/ws": "^7.2.4",
     "discord.js": "^12.1.1",
-    "mongodb": "^3.5.6"
+    "mongodb": "^3.5.6",
+    "mongoose": "^5.9.9"
   }
 }
