--- a/package.json
+++ b/package.json
@@ -23,5 +23,15 @@
     "discord.js": "^12.1.1",
     "mongodb": "^3.5.6",
     "mongoose": "^5.9.9"
+  },
+  "devDependencies": {
+    "husky": "^4.2.5",
+    "prettier": "2.0.4",
+    "pretty-quick": "^2.0.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   }
 }
