--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   "dependencies": {
     "@types/mongodb": "^3.5.6",
     "@types/mongoose": "^5.7.11",
+    "@types/node-fetch": "^2.5.7",
     "@types/ws": "^7.2.4",
     "discord.js": "^12.1.1",
     "mongodb": "^3.5.6",
-    "mongoose": "^5.9.9"
+    "mongoose": "^5.9.9",
+    "node-fetch": "^2.6.0"
   },
   "devDependencies": {
     "husky": "^4.2.5",
