--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@types/mongoose": "^5.7.11",
     "@types/node-fetch": "^2.5.7",
     "@types/ws": "^7.2.4",
+    "canvas": "^2.6.1",
     "discord.js": "^12.1.1",
     "mongodb": "^3.5.6",
     "mongoose": "^5.9.9",
-    "node-fetch": "^2.6.0"
+    "node-fetch": "^2.6.0",
+    "node-vibrant": "^3.1.5"
   },
   "devDependencies": {
     "husky": "^4.2.5",
