--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc -p ./tsconfig.json",
+    "start": "npm run build && node bin/index.js"
   },
   "repository": {
     "type": "git",
@@ -33,7 +34,8 @@
   "devDependencies": {
     "husky": "^4.2.5",
     "prettier": "2.0.4",
-    "pretty-quick": "^2.0.1"
+    "pretty-quick": "^2.0.1",
+    "typescript": "^3.8.3"
   },
   "husky": {
     "hooks": {
