--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "npm install && tsc -p ./tsconfig.json",
+    "build": "npm ci && tsc -p ./tsconfig.json",
     "start": "npm run build && node bin/index.js"
   },
   "repository": {
