--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -24,12 +24,20 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm ci
     - run: npm run build --if-present
-    - name: Generate Artifact
-      run: zip -r source.zip ./bin/
-    - uses: actions/upload-artifact@v2
+    - name: Generate artifact of compiled source code
+      uses: actions/upload-artifact@v2
       with:
-        name: source
-        path: source.zip
+        name: compiled
+        path: bin/
+    - name: Ensure latest version of pm2 is installer
+      run: npm install pm2@latest -g
+    - name: Publish to production
+      env:
+        ssh: ${{ secrets.secret }}
+        user: ${{ secrets.user }}
+        host: ${{ secrets.host }}
+      run: | 
+        echo "$ssh" > ./server.key
+        pm2 deploy ecosystem.config.js production
       
