Disable strict host checking for GitHub

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -32,6 +32,8 @@ jobs:
         path: bin/
     - name: Ensure latest version of pm2 is installer
       run: npm install pm2@latest -g
+    - name: Disable strict host checking for GitHub
+      run: echo -e "Host github.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
     - name: Publish to production
       env:
         ssh: ${{ secrets.secret }}
