--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -32,8 +32,11 @@ jobs:
         path: bin/
     - name: Ensure latest version of pm2 is installer
       run: npm install pm2@latest -g
-    - name: Add deployment server to known hosts
-      run: ssh-keyscan -H ${{secrets.host}} > ~/.ssh/known_hosts
+    - name: Add GitHub and deployment server to known hosts
+      run: |
+        mkdir -p ~/.ssh
+        ssh-keyscan github.com >> ~/.ssh/known_hosts
+        ssh-keyscan -H ${{secrets.host}} > ~/.ssh/known_hosts
     - name: Publish to production
       env:
         ssh: ${{ secrets.secret }}
