Protect key file

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -44,5 +44,6 @@ jobs:
         host: ${{ secrets.host }}
       run: | 
         echo "$ssh" > ./server.key
+        chmod 400 ./server.key
         pm2 deploy ecosystem.config.js production
       
