--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,17 +1,13 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
-name: Node.js CI
+name: Master CD
 
 on:
   push:
-    branches: [ master ]
+    branches: [master]
   pull_request:
-    branches: [ master ]
+    branches: [master]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     strategy:
@@ -19,31 +15,30 @@ jobs:
         node-version: [12.14.0]
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    - run: npm run build --if-present
-    - name: Generate artifact of compiled source code
-      uses: actions/upload-artifact@v2
-      with:
-        name: compiled
-        path: bin/
-    - name: Ensure latest version of pm2 is installer
-      run: npm install pm2@latest -g
-    - name: Add GitHub and deployment server to known hosts
-      run: |
-        mkdir -p ~/.ssh
-        ssh-keyscan github.com >> ~/.ssh/known_hosts
-        ssh-keyscan -H ${{secrets.host}} > ~/.ssh/known_hosts
-    - name: Publish to production
-      env:
-        ssh: ${{ secrets.secret }}
-        user: ${{ secrets.user }}
-        host: ${{ secrets.host }}
-      run: | 
-        echo "$ssh" > ./server.key
-        chmod 400 ./server.key
-        pm2 deploy ecosystem.config.js production
-      
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+      - run: npm run build --if-present
+      - name: Generate artifact of compiled source code
+        uses: actions/upload-artifact@v2
+        with:
+          name: compiled
+          path: bin/
+      - name: Ensure latest version of pm2 is installer
+        run: npm install pm2@latest -g
+      - name: Add GitHub and deployment server to known hosts
+        run: |
+          mkdir -p ~/.ssh
+          ssh-keyscan github.com >> ~/.ssh/known_hosts
+          ssh-keyscan -H ${{secrets.host}} > ~/.ssh/known_hosts
+      - name: Publish to production
+        env:
+          ssh: ${{ secrets.secret }}
+          user: ${{ secrets.user }}
+          host: ${{ secrets.host }}
+        run: |
+          echo "$ssh" > ./server.key
+          chmod 400 ./server.key
+          pm2 deploy ecosystem.config.js production
