--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "clean": "rm -rf ./bin/",
     "build": "npm ci && tsc -p ./tsconfig.json",
     "start": "npm run build && node bin/index.js"
   },
