--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/mongoose": "^5.7.11",
     "@types/node-fetch": "^2.5.7",
     "@types/randomcolor": "^0.5.4",
+    "@types/uuid": "^8.0.0",
     "@types/ws": "^7.2.4",
     "brainfuck-node": "^1.0.2",
     "canvas": "^2.6.1",
@@ -31,7 +32,8 @@
     "mongoose": "^5.9.9",
     "node-fetch": "^2.6.0",
     "node-vibrant": "^3.1.5",
-    "randomcolor": "^0.5.4"
+    "randomcolor": "^0.5.4",
+    "uuid": "^8.1.0"
   },
   "devDependencies": {
     "husky": "^4.2.5",
