--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,8 @@
       "name": "Launch Program",
       "program": "${workspaceFolder}/src/index.ts",
       "preLaunchTask": "tsc: build - tsconfig.json",
-      "outFiles": ["${workspaceFolder}/bin/**/*.js"]
+      "outFiles": ["${workspaceFolder}/bin/**/*.js"],
+      "console": "integratedTerminal"
     }
   ]
 }
