--- a/package.json
+++ b/package.json
@@ -20,27 +20,27 @@
   "homepage": "https://github.com/TSkoll/rei-ts#readme",
   "dependencies": {
     "@pm2/io": "^4.3.5",
-    "@types/mongodb": "^3.5.27",
+    "@types/mongodb": "^3.5.31",
     "@types/mongoose": "^5.7.36",
     "@types/node-fetch": "^2.5.7",
     "@types/randomcolor": "^0.5.5",
     "@types/uuid": "^8.3.0",
-    "@types/ws": "^7.2.6",
+    "@types/ws": "^7.2.8",
     "brainfuck-node": "^1.0.2",
     "canvas": "^2.6.1",
-    "discord.js": "^12.3.1",
+    "discord.js": "^12.4.1",
     "mongodb": "^3.6.2",
-    "mongoose": "^5.10.7",
+    "mongoose": "^5.10.11",
     "node-fetch": "^2.6.1",
-    "node-vibrant": "^3.1.5",
-    "randomcolor": "^0.5.4",
-    "uuid": "^8.3.0"
+    "node-vibrant": "^3.2.1-alpha.1",
+    "randomcolor": "^0.6.2",
+    "uuid": "^8.3.1"
   },
   "devDependencies": {
     "husky": "^4.3.0",
-    "prettier": "2.0.4",
-    "pretty-quick": "^2.0.2",
-    "typescript": "^3.9.7"
+    "prettier": "2.1.2",
+    "pretty-quick": "^3.1.0",
+    "typescript": "^4.0.5"
   },
   "husky": {
     "hooks": {
