--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
     "node-fetch": "^2.6.1",
     "node-vibrant": "^3.2.1-alpha.1",
     "randomcolor": "^0.6.2",
-    "uuid": "^8.3.1",
-    "uwuifier": "^2.0.4"
+    "uuid": "^8.3.1"
   },
   "devDependencies": {
     "husky": "^4.3.0",
